--- a/public/bundle.css
+++ b/public/bundle.css
@@ -1,3 +1,3 @@
-body{background-color:pink}
+*{margin:0;padding:0}*,*::before,*::after{margin:0;padding:0;box-sizing:inherit}html{box-sizing:border-box;font-size:62.5%}body{background-image:url(img/afdd3ba05ecae19b9cb7376210e842b3.jpg);background-repeat:no-repeat;background-size:cover;background-position:center;font-family:"Roboto",sans-serif}
 
 /*# sourceMappingURL=bundle.css.map*/
