Styled the water temperature widget

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,5 +1,9 @@
 // COLORS
 $header-date-text-color: #121212;
+$widget-bg-color: rgba(255, 255, 255, .8);
+$widget-border-top-color: rgba(28, 28, 28, .8);
+$widget-shadow-color: rgba(0, 0, 0, 0.1);
+$water-temp-highlight-color: #5286ff;
 
 // FONT VARIABLES
 $font-primary: 'Roboto',
