--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -4,6 +4,9 @@ $widget-bg-color: rgba(255, 255, 255, .8);
 $widget-border-top-color: rgba(28, 28, 28, .8);
 $widget-shadow-color: rgba(0, 0, 0, 0.1);
 $water-temp-highlight-color: #5286ff;
+$wind-speed-highlight-color: #169c60;
+$wind-speed-chart-btn-bg-color: rgba(28, 28, 28, .8);
+$wind-speed-chart-btn-text-color: white;
 
 // FONT VARIABLES
 $font-primary: 'Roboto',
