--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -33,3 +33,8 @@ body {
 .heading-primary {
   font-size: 3rem;
 }
+
+.heading-secondary {
+  font-size: 2rem;
+  text-shadow: 0.04rem 0.04rem 2px rgba(255, 255, 255, 0.8);
+}
