--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -7,6 +7,7 @@ $water-temp-highlight-color: #5286ff;
 $wind-speed-highlight-color: #169c60;
 $wind-speed-chart-btn-bg-color: rgba(28, 28, 28, .8);
 $wind-speed-chart-btn-text-color: white;
+$chart-bg-color: rgba(255, 255, 255, .8);
 
 // FONT VARIABLES
 $font-primary: 'Roboto',
