--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3,6 +3,7 @@ $header-date-text-color: #121212;
 $widget-bg-color: rgba(255, 255, 255, .8);
 $widget-border-top-color: rgba(28, 28, 28, .8);
 $widget-shadow-color: rgba(0, 0, 0, 0.1);
+$heading-secondary-text-shadow: rgba(255, 255, 255, 0.8);
 $water-temp-highlight-color: #5286ff;
 $wind-speed-highlight-color: #169c60;
 $wind-speed-chart-btn-bg-color: rgba(28, 28, 28, .8);
