--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -36,5 +36,5 @@ body {
 
 .heading-secondary {
   font-size: 2rem;
-  text-shadow: 0.04rem 0.04rem 2px rgba(255, 255, 255, 0.8);
+  text-shadow: 0.04rem 0.04rem 2px $heading-secondary-text-shadow;
 }
