--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,4 +1,7 @@
+$body-bg-image: url(../img/primary-bg.jpg);
+
 // COLORS
+$body-bg-color: #ebebeb;
 $header-date-text-color: #121212;
 $widget-bg-color: rgba(255, 255, 255, .8);
 $widget-border-top-color: rgba(28, 28, 28, .8);
@@ -9,6 +12,7 @@ $wind-speed-highlight-color: #169c60;
 $wind-speed-chart-btn-bg-color: rgba(28, 28, 28, .8);
 $wind-speed-chart-btn-text-color: white;
 $chart-bg-color: rgba(255, 255, 255, .8);
+$footer-bg-color: rgba(255, 255, 255, .8);
 
 // FONT VARIABLES
 $font-primary: 'Roboto',
