--- a/src/sass/_widgets.scss
+++ b/src/sass/_widgets.scss
@@ -3,9 +3,14 @@
   background-color: $widget-bg-color;
   font-size: 1.5rem;
   padding: 1.4rem 1.8rem;
+  margin-bottom: 2rem;
   border-top: 4px solid $widget-border-top-color;
   border-radius: 2px;
   box-shadow: 1px 1px 4px $widget-shadow-color;
+
+  &:nth-child(3) {
+    margin-bottom: 0;
+  }
 }
 
 .available-spots {
