Added a few vars for footer and a bit styling

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -13,6 +13,8 @@ $wind-speed-chart-btn-bg-color: rgba(28, 28, 28, .8);
 $wind-speed-chart-btn-text-color: white;
 $chart-bg-color: rgba(255, 255, 255, .8);
 $footer-bg-color: rgba(255, 255, 255, .8);
+$footer-credits-link-bg-color: black;
+$footer-credits-link-text-color: white;
 
 // FONT VARIABLES
 $font-primary: 'Roboto',
