--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -5,15 +5,17 @@
 
   &__credits {
     a {
-      background-color: black;
-      color: white;
+      background-color: $footer-credits-link-bg-color;
+      color: $footer-credits-link-text-color;
       font-weight: bold;
       padding: .5rem .6rem;
       border-radius: 3px;
       text-decoration: none;
 
       &:hover {
-        text-decoration: none;
+        background-color: transparent;
+        color: black;
+        text-decoration: underline;
       }
     }
   }
