--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -23,3 +23,7 @@ $wind-speed-chart-btn-text-color: white;
 $footer-bg-color: rgba(255, 255, 255, .8);
 $footer-credits-link-bg-color: black;
 $footer-credits-link-text-color: white;
+
+$loader-bg-color: white;
+$spinner-bg-color: #cfcfcf;
+$spinner-roll-elem-color: #0f8bff;
