--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,7 +1,8 @@
 @import 'variables';
 @import 'base';
+@import 'loader';
 @import 'header';
 @import 'widgets';
 @import 'charts';
 @import 'sidebars';
-@import 'footer'
+@import 'footer';
