--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -7,4 +7,8 @@
     color: $header-date-text-color;
     margin-top: .4rem;
   }
+
+  @media only screen and (max-width: $bp-small) {
+    padding-bottom: 2rem;
+  }
 }
