--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -27,3 +27,9 @@ $footer-credits-link-text-color: white;
 $loader-bg-color: white;
 $spinner-bg-color: #cfcfcf;
 $spinner-roll-elem-color: #0f8bff;
+
+// RESPONSIVE BREAKPOINTS
+$bp-largest: 65rem;
+$bp-large: 50rem;
+$bp-medium: 45em;
+$bp-small: 42em;
