--- a/src/sass/_widgets.scss
+++ b/src/sass/_widgets.scss
@@ -11,6 +11,14 @@
   &:nth-child(3) {
     margin-bottom: 0;
   }
+
+  @media only screen and (max-width: $bp-largest) {
+    font-size: 1.26rem;
+  }
+
+  @media only screen and (max-width: $bp-large) {
+    font-size: 1.17rem;
+  }
 }
 
 .available-spots {
@@ -18,6 +26,19 @@
     display: inline-block;
     font-size: 1.2rem;
     margin-bottom: .35rem;
+
+    @media only screen and (max-width: $bp-largest) {
+      font-size: 1.14rem;
+    }
+
+    @media only screen and (max-width: $bp-large) {
+      font-size: 1.1rem;
+    }
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    width: 45%;
+    margin-right: 2rem;
   }
 }
 
@@ -28,12 +49,19 @@
 }
 
 .wind-speed {
+  padding-bottom: 0;
+
   &__text {
-    margin-bottom: .9rem;
+    margin-bottom: 1.5rem;
   }
 
   &__highlight {
     color: $wind-speed-highlight-color;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    flex-grow: 2;
+    max-width: 80%;
   }
 }
 
@@ -43,6 +71,7 @@
   font-size: 1.1rem;
   text-transform: uppercase;
   padding: 1rem;
+  margin-bottom: 2rem;
   border-radius: 3px;
   border: none;
   outline: none;
@@ -55,5 +84,17 @@
 
   &:hover {
     background-color: lighten($wind-speed-chart-btn-bg-color, 10%);
+  }
+
+  @media only screen and (max-width: $bp-largest) {
+    font-size: 1rem;
+  }
+
+  @media only screen and (max-width: $bp-large) {
+    font-size: .86rem;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    flex-grow: 3;
   }
 }
